New in v8.0.0
=============

Important compatibility changes
-------------------------------

* Rename ``crumbs.tmpl`` to ``ui_helper.tmpl`` and the breadcrumbs
  ``bar`` function to ``breadcrumbs`` (your templates may need
  changing as well)
* Rename ``post.is_mathjax`` to ``post.has_math``. Themes using
  ``post.is_mathjax`` must be updated; it is recommended that they are
  changed to use ``math_helper.tmpl``.
* Reading reST docinfo metadata, including first heading as title,
  requires ``USE_REST_DOCINFO_METADATA`` now (Issue #2987)
* RSS feeds might have changed their places due to ``RSS_PATH``
  behavior changes (you may need to change ``RSS_PATH``,
  ``RSS_FILENAME_BASE``)
* Atom feeds for archives and Atom pagination are no longer supported
  (Issue #3016)
* Sections are replaced by categories (Issue #2833)
* You need ``<a class="reference">`` (instead of ``image-reference``)
  to activate the lightbox now
* Date formatting now uses the Babel library, you might need to
  change ``BABEL_FORMAT`` (Issues #2606, 3121)
* The first heading in a reST document is not removed anymore by
  default unless ``USE_REST_DOCINFO_METADATA`` is enabled
  (Issues #2382, #3124)

Features
--------

* Add Malayalam translation by Nemo Dicto
* Add Vietnamese translation by Hoai-Thu Vuong
* Don’t generate gallery index if the destination directory is
  site root and it would conflict with blog index (Issue #3133)
* All built-in themes now support ``updated`` timestamp fields in
  posts. The update time, if it is specified and different from
  the posting time, will be displayed as
  "{postDate} (${messages("updated")} {updateDate})". If no update
  time is specified, the posting time will be displayed alone.
* All built-in themes now support the ``DATE_FANCINESS`` option.
* Theme bundles are now parsed using the configparser module and
  can support newlines inside entries as well as comments
* Make bootstrap4 navbar color configurable with